--- a/extraction.ipynb
+++ b/extraction.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import nasdaqdatalink\n",
     "import pandas as pd\n",
-    "import functools as f"
+    "import functools as ft"
    ]
   },
   {
@@ -44,8 +44,6 @@
     "transactions_per_block = nasdaqdatalink.get('BCHAIN/NTRBL', start_date=start_date)\n",
     "confirmation_time_minutes = nasdaqdatalink.get('BCHAIN/ATRCT', start_date=start_date)\n",
     "unique_addresses_used = nasdaqdatalink.get('BCHAIN/NADDU', start_date=start_date)\n",
-    "# network_deficit = nasdaqdatalink.get('BCHAIN/NETDF', start_date=start_date)\n",
-    "# mining_operating_margin = nasdaqdatalink.get('BCHAIN/MIOPM', start_date=start_date)\n",
     "miners_revenue = nasdaqdatalink.get('BCHAIN/MIREV', start_date=start_date)"
    ]
   },
@@ -73,63 +71,7 @@
     "transactions_per_block.columns=[\"Transactions_Per_Block\"]\n",
     "confirmation_time_minutes.columns=[\"Confirmation_Time_Minutes\"]\n",
     "unique_addresses_used.columns=[\"Unique_Addresses_Used\"]\n",
-    "# network_deficit.columns=[\"Network_Deficit\"]\n",
-    "# mining_operating_margin.columns=[\"Mining_Operating_Margin\"]\n",
     "miners_revenue.columns=[\"Miners_Revenue\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 168,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Network_Deficit</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Network_Deficit]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 168,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mining_operating_margin\n",
-    "network_deficit"
    ]
   },
   {
@@ -157,8 +99,6 @@
     "    transactions_per_block,\n",
     "    confirmation_time_minutes,\n",
     "    unique_addresses_used,\n",
-    "    # network_deficit,\n",
-    "    # mining_operating_margin,\n",
     "    miners_revenue\n",
     "    ]"
    ]
@@ -174,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +531,7 @@
        "[389 rows x 19 columns]"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,18 +546,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
