Google Scheduler job done

--- a/update_to_gcp.ipynb
+++ b/update_to_gcp.ipynb
@@ -6,30 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import pandas as pd\n",
     "import pandas_gbq"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from google.cloud import storage"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -133,26 +116,26 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2023-06-06</th>\n",
-       "      <td>25747.2</td>\n",
-       "      <td>117855.000849</td>\n",
-       "      <td>3.081878e+09</td>\n",
-       "      <td>3.845778e+08</td>\n",
+       "      <th>2023-06-07</th>\n",
+       "      <td>27243.64</td>\n",
+       "      <td>107941.326097</td>\n",
+       "      <td>2.879720e+09</td>\n",
+       "      <td>3.438278e+08</td>\n",
        "      <td>5.123434e+13</td>\n",
-       "      <td>5.117868e+11</td>\n",
-       "      <td>462072.0</td>\n",
-       "      <td>848371801.0</td>\n",
-       "      <td>19394681.25</td>\n",
-       "      <td>1.353635e+06</td>\n",
-       "      <td>82.922632</td>\n",
-       "      <td>2.181112e+06</td>\n",
-       "      <td>58.118403</td>\n",
-       "      <td>0.877096</td>\n",
-       "      <td>1.692034</td>\n",
-       "      <td>3060.07947</td>\n",
-       "      <td>9.633333</td>\n",
-       "      <td>763100.0</td>\n",
-       "      <td>2.703104e+07</td>\n",
+       "      <td>5.100292e+11</td>\n",
+       "      <td>433781.0</td>\n",
+       "      <td>848834517.0</td>\n",
+       "      <td>19395693.75</td>\n",
+       "      <td>1.020737e+06</td>\n",
+       "      <td>97.602338</td>\n",
+       "      <td>2.607709e+06</td>\n",
+       "      <td>57.912899</td>\n",
+       "      <td>0.87236</td>\n",
+       "      <td>1.62168</td>\n",
+       "      <td>3213.192593</td>\n",
+       "      <td>13.5</td>\n",
+       "      <td>734954.0</td>\n",
+       "      <td>2.512152e+07</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -161,34 +144,34 @@
       "text/plain": [
        "            Price_USD  Transaction_Volume  Transaction_Volume_USD   \n",
        "Date                                                                \n",
-       "2023-06-06    25747.2       117855.000849            3.081878e+09  \\\n",
+       "2023-06-07   27243.64       107941.326097            2.879720e+09  \\\n",
        "\n",
        "               Hash_Rate    Difficulty    Market_Cap  Transaction_Count   \n",
        "Date                                                                      \n",
-       "2023-06-06  3.845778e+08  5.123434e+13  5.117868e+11           462072.0  \\\n",
+       "2023-06-07  3.438278e+08  5.123434e+13  5.100292e+11           433781.0  \\\n",
        "\n",
        "            Transaction_Count_Accumulated  Total_Mined  Output_Volume   \n",
        "Date                                                                    \n",
-       "2023-06-06                    848371801.0  19394681.25   1.353635e+06  \\\n",
+       "2023-06-07                    848834517.0  19395693.75   1.020737e+06  \\\n",
        "\n",
        "            TRFees_BTC    TRFees_USD  Cost_Per_Transaction   \n",
        "Date                                                         \n",
-       "2023-06-06   82.922632  2.181112e+06             58.118403  \\\n",
+       "2023-06-07   97.602338  2.607709e+06             57.912899  \\\n",
        "\n",
        "            Cost_Percentage_of_TRVolume  Block_Size_Average   \n",
        "Date                                                          \n",
-       "2023-06-06                     0.877096            1.692034  \\\n",
+       "2023-06-07                      0.87236             1.62168  \\\n",
        "\n",
        "            Transactions_Per_Block  Confirmation_Time_Minutes   \n",
        "Date                                                            \n",
-       "2023-06-06              3060.07947                   9.633333  \\\n",
+       "2023-06-07             3213.192593                       13.5  \\\n",
        "\n",
        "            Unique_Addresses_Used  Miners_Revenue  \n",
        "Date                                               \n",
-       "2023-06-06               763100.0    2.703104e+07  "
+       "2023-06-07               734954.0    2.512152e+07  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +230,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
