--- a/extraction.ipynb
+++ b/extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,22 +13,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "start_date = '2022-05-01'"
+    "start_date = '2022-11-01'\n",
+    "end_date = '2023-01-01'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MKPRU: Price_USD has been added to the Dataframe.\n"
+     ]
+    }
+   ],
    "source": [
-    "bitcoin = nasdaqdatalink.get('BCHAIN/MKPRU', start_date=start_date)\n",
+    "bitcoin = nasdaqdatalink.get('BCHAIN/MKPRU', start_date=start_date, end_date=end_date)\n",
     "bitcoin.columns=[\"Price_USD\"]\n",
     "print(\"MKPRU: Price_USD has been added to the Dataframe.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Price_USD</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2022-11-01</th>\n",
+       "      <td>20499.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-11-02</th>\n",
+       "      <td>20486.26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-11-03</th>\n",
+       "      <td>20153.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-11-04</th>\n",
+       "      <td>20208.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-11-05</th>\n",
+       "      <td>21152.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-12-28</th>\n",
+       "      <td>16699.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-12-29</th>\n",
+       "      <td>16539.28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-12-30</th>\n",
+       "      <td>16630.49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-12-31</th>\n",
+       "      <td>16599.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-01-01</th>\n",
+       "      <td>16526.78</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>62 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Price_USD\n",
+       "Date                 \n",
+       "2022-11-01   20499.29\n",
+       "2022-11-02   20486.26\n",
+       "2022-11-03   20153.99\n",
+       "2022-11-04   20208.16\n",
+       "2022-11-05   21152.93\n",
+       "...               ...\n",
+       "2022-12-28   16699.00\n",
+       "2022-12-29   16539.28\n",
+       "2022-12-30   16630.49\n",
+       "2022-12-31   16599.69\n",
+       "2023-01-01   16526.78\n",
+       "\n",
+       "[62 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bitcoin"
    ]
   },
   {
@@ -112,6 +231,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
